--- a/res/xml/suspend_actions.xml
+++ b/res/xml/suspend_actions.xml
@@ -19,13 +19,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="screen_state_toggles_enable_key"
         android:title="@string/screen_state_toggles_enable_title"
         android:summary="@string/screen_state_toggles_enable_summary"
         android:defaultValue="false"/>
 
-    <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="screen_state_off_delay"
         android:title="@string/screen_state_off_delay_title"
         android:summary="@string/screen_state_off_delay_summary"
@@ -36,7 +36,7 @@
         android:defaultValue="0"
         android:dependency="screen_state_toggles_enable_key" />
 
-    <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="screen_state_on_delay"
         android:title="@string/screen_state_on_delay_title"
         android:summary="@string/screen_state_on_delay_summary"
@@ -51,13 +51,13 @@
         android:key="screen_state_toggles_mobile_key"
         android:title="@string/screen_state_toggles_mobile_title">
 
-       <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="screen_state_toggles_twog"
             android:title="@string/screen_state_toggles_twog"
             android:summary="@string/screen_state_toggles_twog_summary"
             android:defaultValue="false"/>
 
-       <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="screen_state_toggles_mobile_data"
             android:title="@string/screen_state_toggles_mobile_data"
             android:summary="@string/screen_state_toggles_mobile_data_summary"
@@ -68,7 +68,7 @@
         android:key="screen_state_toggles_location_key"
         android:title="@string/screen_state_toggles_location_title">
 
-       <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="screen_state_toggles_gps"
             android:title="@string/screen_state_toggles_gps"
             android:summary="@string/screen_state_toggles_gps_summary"
