--- a/res/xml/buttons_hwkeys.xml
+++ b/res/xml/buttons_hwkeys.xml
@@ -97,7 +97,7 @@
             android:title="@string/button_brightness_sw_title"
             android:persistent="false" />
 
-        <com.blissroms.blissify.preference.CustomSeekBarPreference
+        <com.bliss.support.preferences.CustomSeekBarPreference
             android:key="button_brightness"
             android:title="@string/button_brightness_title"
             android:max="255"
@@ -167,19 +167,19 @@
         android:key="vol_key"
         android:title="@string/buttons_volume_title"/>
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="volume_button_music_control"
         android:title="@string/volume_rocker_music_controls_title"
         android:summary="@string/volume_rocker_music_controls_summary"
         android:defaultValue="true" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="swap_volume_buttons"
         android:title="@string/swap_volume_buttons_title"
         android:summary="@string/swap_volume_buttons_summary"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="volume_dialog_timeout"
         android:title="@string/volume_dialog_timeout_title"
         android:min="500"
@@ -189,20 +189,20 @@
         settings:unitsLeft=""
         settings:unitsRight="ms" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="volume_panel_on_left"
         android:title="@string/volume_panel_on_left_title"
         android:summary="@string/volume_panel_on_left_summary"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="screen_shot_shortcut"
         android:title="@string/screen_shot_shortcut"
         android:summaryOn="@string/screen_shot_shortcut_on"
         android:summaryOff="@string/screen_shot_shortcut_off"
         android:defaultValue="true" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="screen_record_shortcut"
         android:title="@string/screen_record_shortcut"
         android:summaryOn="@string/screen_record_shortcut_on"
@@ -214,19 +214,19 @@
         android:key="vol_dnd_category"
         android:title="@string/vol_dnd_category_title"/>
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="sysui_volume_down_silent"
         android:title="@string/volbtn_down_zen_title"
         android:summary="@string/volbtn_down_zen_summary"
         android:defaultValue="true"/>
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="sysui_volume_up_silent"
         android:title="@string/volbtn_up_zen_title"
         android:summary="@string/volbtn_up_zen_summary"
         android:defaultValue="true" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="sysui_show_full_zen"
         android:title="@string/vol_zen_title"
         android:summary="@string/vol_zen_summary"
@@ -235,32 +235,32 @@
    <PreferenceCategory
         android:title="@string/audio_panel_view">
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="audio_panel_view_media"
             android:title="@string/audio_panel_view_media_title"
             android:defaultValue="true"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="audio_panel_view_ringer"
             android:title="@string/audio_panel_view_ringer_title"
             android:defaultValue="false"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="audio_panel_view_notification"
             android:title="@string/audio_panel_view_notification_title"
             android:defaultValue="false"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="audio_panel_view_alarm"
             android:title="@string/audio_panel_view_alarm_title"
             android:defaultValue="false"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="audio_panel_view_voice"
             android:title="@string/audio_panel_view_voice_title"
             android:defaultValue="false"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="audio_panel_view_bt_sco"
             android:title="@string/audio_panel_view_bt_sco_title"
             android:defaultValue="false"/>
