--- a/res/xml/buttons_navbar.xml
+++ b/res/xml/buttons_navbar.xml
@@ -13,20 +13,20 @@
         android:summary="@string/navigation_bar_show_summary"
         android:persistent="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="use_bottom_gesture_navigation"
         android:title="@string/use_bottom_gesture_title"
         android:summary="@string/use_bottom_gesture_summary"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="navigation_bar_menu_arrow_keys"
         android:title="@string/show_navbar_arrow_keys_title"
         android:summary="@string/show_navbar_arrow_keys_summary"
         android:dependency="navbar_visibility"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="one_hand_mode_enabled"
         android:title="@string/one_hand_mode_title"
         android:summary="@string/one_hand_mode_summary"
