--- a/res/xml/edge_gestures.xml
+++ b/res/xml/edge_gestures.xml
@@ -8,12 +8,12 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
-    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="edge_gestures_enabled"
         android:title="@string/edge_gestures_title"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SecureSettingIntListPreference
+    <com.bliss.support.preferences.SecureSettingIntListPreference
         android:key="edge_gestures_feedback_duration"
         android:entries="@array/edge_gestures_feedback_time_labels"
         android:entryValues="@array/edge_gestures_feedback_time"
@@ -22,7 +22,7 @@
         android:summary="%s"
         android:defaultValue="100" />
 
-    <com.blissroms.blissify.preference.SecureSettingIntListPreference
+    <com.bliss.support.preferences.SecureSettingIntListPreference
         android:key="edge_gestures_long_press_duration"
         android:entries="@array/edge_gestures_long_press_time_labels"
         android:entryValues="@array/edge_gestures_long_press_time"
@@ -38,7 +38,7 @@
         android:key="edge_gestures_category_back"
         android:title="@string/edge_gestures_back_category_title">
 
-    <com.blissroms.blissify.preference.SecureSettingIntListPreference
+    <com.bliss.support.preferences.SecureSettingIntListPreference
             android:key="edge_gestures_back_edges"
             android:title="@string/edge_gestures_back_edges_title"
             android:entries="@array/edge_gestures_back_edges_labels"
@@ -46,7 +46,7 @@
             android:summary="%s"
             android:defaultValue="5" />
 
-    <com.blissroms.blissify.preference.SecureSettingIntListPreference
+    <com.bliss.support.preferences.SecureSettingIntListPreference
             android:key="edge_gestures_landscape_back_edges"
             android:title="@string/edge_gestures_landscape_back_edges_title"
             android:entries="@array/edge_gestures_back_edges_labels"
@@ -54,7 +54,7 @@
             android:summary="%s"
             android:defaultValue="5" />
 
-    <com.blissroms.blissify.preference.SecureSettingSeekBarPreference
+    <com.bliss.support.preferences.SecureSettingSeekBarPreference
             android:key="edge_gestures_back_screen_percent"
             android:title="@string/edge_gestures_back_screen_percent_summary"
             android:min="0"
@@ -63,7 +63,7 @@
             settings:units="%"
             android:defaultValue="60" />
 
-    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="edge_gestures_back_show_ui_feedback"
             android:title="@string/edge_gestures_back_show_ui_feedback_title"
             android:summary="@string/edge_gestures_back_show_ui_feedback_summary"
