--- a/res/xml/interface_batteryled.xml
+++ b/res/xml/interface_batteryled.xml
@@ -6,24 +6,24 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="battery_light_enabled"
         android:title="@string/battery_light_enable"
         android:defaultValue="false"/>
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="battery_light_pulse"
         android:title="@string/battery_low_pulse_title"
         android:dependency="battery_light_enabled"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="battery_light_only_fully_charged"
         android:title="@string/battery_light_only_full_charge_title"
         android:dependency="battery_light_enabled"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="battery_light_allow_on_dnd"
         android:title="@string/notification_light_zen_mode"
         android:dependency="battery_light_enabled"
@@ -34,28 +34,28 @@
         android:title="@string/battery_light_cat"
         android:dependency="battery_light_enabled">
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
+        <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="low_color"
             android:title="@string/battery_light_low_color_title"
             android:persistent="false"
             ledPreview="true"
             bliss:defaultColorValue="0xFFFFFF00" />
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
+        <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="medium_color"
             android:title="@string/battery_light_medium_color_title"
             android:persistent="false"
             ledPreview="true"
             bliss:defaultColorValue="0xFFFFFF00" />
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
+        <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="full_color"
             android:title="@string/battery_light_full_color_title"
             android:persistent="false"
             ledPreview="true"
             bliss:defaultColorValue="0xFFFFFF00"/>
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
+        <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="really_full_color"
             android:title="@string/battery_light_really_full_color_title"
             android:persistent="false"
@@ -69,13 +69,13 @@
         android:title="@string/fast_color_cat_title"
         android:dependency="battery_light_enabled" >
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="fast_charging_led_enabled"
             android:title="@string/fast_charging_led_enabled_title"
             android:summary="@string/fast_charging_led_enabled_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
+        <com.bliss.support.preferences.ColorPickerPreference
             android:key="fast_color"
             android:title="@string/fast_charging_light_color_title"
             android:summary="@string/fast_charging_light_color_summary"
