--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -11,25 +11,25 @@
         android:key="ls_clock"
         android:title="@string/ls_clock" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="hide_lockscreen_status_bar"
             android:title="@string/hide_lockscreen_status_bar_title"
             android:summary="@string/hide_lockscreen_status_bar_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_clock"
             android:title="@string/lockscreen_clock_title"
             android:summary="@string/lockscreen_clock_summary"
             android:defaultValue="true" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_info"
             android:title="@string/lockscreen_info_title"
             android:summary="@string/lockscreen_info_summary"
             android:defaultValue="true" />
 
-        <com.blissroms.blissify.preference.SystemSettingListPreference
+        <com.bliss.support.preferences.SystemSettingListPreference
             android:key="lockscreen_clock_selection"
             android:title="@string/lockscreen_clock_selection_title"
             android:entries="@array/lockscreen_clock_selection_entries"
@@ -48,39 +48,39 @@
          android:key="ls_media"
          android:title="@string/lockscreen_media_cat"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_media_metadata"
             android:title="@string/media_art_title"
             android:summary="@string/media_art_summary"
             android:defaultValue="true" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="force_ambient_for_media"
             android:title="@string/force_ambient_for_media_title"
             android:summary="@string/force_ambient_for_media_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="lockscreen_visualizer_enabled"
             android:title="@string/lockscreen_visualizer_enable"
             android:summary="@string/lockscreen_visualizer_enable_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="ambient_visualizer"
             android:title="@string/ambient_visualizer_title"
             android:summary="@string/ambient_visualizer_summary"
             android:dependency="lockscreen_visualizer_enabled"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lock_screen_visualizer_use_custom_color"
             android:title="@string/lockscreen_visualizer_enable_custom"
             android:summary="@string/lockscreen_visualizer_enable_custom_summary"
             android:dependency="lockscreen_visualizer_enabled"
             android:defaultValue="false" />
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
+        <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="lock_screen_visualizer_custom_color"
             android:title="@string/lockscreen_visualizer_custom_color"
             android:dependency="lock_screen_visualizer_use_custom_color"
@@ -91,13 +91,13 @@
          android:key="ls_charge"
          android:title="@string/lockscreen_charging_cat"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_battery_info"
             android:title="@string/lockscreen_battery_info_title"
             android:summary="@string/lockscreen_battery_info_summary"
             android:defaultValue="true" />
 
-        <com.blissroms.blissify.preference.SystemSettingIntListPreference
+        <com.bliss.support.preferences.SystemSettingIntListPreference
             android:key="ambient_bottom_display"
             android:entries="@array/ambient_display_bottom_info_entries"
             android:entryValues="@array/ambient_display_bottom_info_values"
@@ -109,20 +109,20 @@
          android:key="ls_weather"
          android:title="@string/lockscreen_weather_cat"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_weather_enabled"
             android:title="@string/lockscreen_weather_title"
             android:summary="@string/lockscreen_weather_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_weather_show_city"
             android:title="@string/lockscreen_weather_show_city_title"
             android:summary="@string/lockscreen_weather_show_city_summary"
             android:dependency="lockscreen_weather_enabled"
             android:defaultValue="true" />
 
-         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_weather_show_temp"
             android:title="@string/lockscreen_weather_show_temp_title"
             android:summary="@string/lockscreen_weather_show_temp_summary"
