--- a/res/xml/qs_header.xml
+++ b/res/xml/qs_header.xml
@@ -7,7 +7,7 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_custom_header"
             android:title="@string/status_bar_custom_header_title"
             android:defaultValue="false" />
@@ -45,7 +45,7 @@
             android:dependency="status_bar_custom_header" >
         </Preference>
 
-        <com.blissroms.blissify.preference.CustomSeekBarPreference
+        <com.bliss.support.preferences.CustomSeekBarPreference
             android:key="status_bar_custom_header_shadow"
             android:title="@string/status_bar_custom_header_shadow_title"
             android:summary="@string/status_bar_custom_header_shadow_summary"
