--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -24,7 +24,7 @@
         android:title="@string/recent_button_title"
         android:key="stock_recents" >
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="systemui_recents_mem_display"
             android:title="@string/recents_show_membar_title"
             android:summary="@string/recents_show_membar_summary"
@@ -36,7 +36,7 @@
         android:title="@string/immersive_recents_title"
         android:key="immersive" >
 
-        <com.blissroms.blissify.preference.SystemSettingListPreference
+        <com.bliss.support.preferences.SystemSettingListPreference
             android:key="immersive_recents"
             android:title="@string/immersive_recents_title"
             android:summary="@string/immersive_recents_summary"
@@ -45,13 +45,13 @@
             android:entryValues="@array/immersive_recents_values"
             android:defaultValue="0" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="recents_full_screen_clock"
             android:title="@string/recents_full_screen_clock_title"
             android:summary="@string/recents_full_screen_clock_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="recents_full_screen_date"
             android:title="@string/recents_full_screen_date_title"
             android:summary="@string/recents_full_screen_date_summary"
@@ -63,13 +63,13 @@
         android:key="clearall_recents_category"
         android:title="@string/clearall_recents_category">
 
-         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="show_clear_all_recents"
             android:title="@string/show_clear_all_recents_button_title"
             android:summary="@string/show_clear_all_recents_button_summary"
             android:defaultValue="true" />
 
-         <com.blissroms.blissify.preference.SystemSettingListPreference
+         <com.bliss.support.preferences.SystemSettingListPreference
             android:key="recents_clear_all_location"
             android:title="@string/recents_clear_all_location_title"
             android:dialogTitle="@string/recents_clear_all_location_title"
