--- a/res/xml/statusbar_clock.xml
+++ b/res/xml/statusbar_clock.xml
@@ -6,7 +6,7 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_clock"
             android:title="@string/status_bar_clock_show"
             android:defaultValue="true" />
@@ -27,13 +27,13 @@
             android:entryValues="@array/status_bar_am_pm_values"
             android:dependency="status_bar_clock" />
             
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_clock_seconds"
             android:title="@string/clock_seconds_display"
             android:dependency="status_bar_clock"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
             android:key="status_bar_clock_size"
             android:title="@string/status_bar_clock_font_size_title"
             android:max="23"
