--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -11,31 +11,31 @@
          android:key="statusbar_icons"
          android:title="@string/statusbar_icons_cat"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_show_battery"
             android:title="@string/bluetooth_battery_title"
             android:summary="@string/bluetooth_battery_summary"
             android:defaultValue="true" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="statusbar_show_wifi_activity"
             android:title="@string/statusbar_show_wifi_activity_title"
             android:summary="@string/statusbar_show_wifi_activity_summary"
             android:defaultValue="true" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="roaming_indicator_icon"
             android:title="@string/roaming_indicator_icon_title"
             android:summary="@string/roaming_indicator_icon_summary"
             android:defaultValue="true"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="volte_icon"
             android:title="@string/volte_icon_title"
             android:summary="@string/volte_icon_summary"
@@ -44,7 +44,7 @@
     <PreferenceCategory
         android:title="@string/carrier_label_settings_title"/>
 
-         <com.blissroms.blissify.preference.SystemSettingListPreference
+         <com.bliss.support.preferences.SystemSettingListPreference
             android:key="status_bar_show_carrier"
             android:title="@string/show_carrier_title"
             android:dialogTitle="@string/show_carrier_title"
@@ -61,19 +61,19 @@
          android:key="nettraffic_settings"
          android:title="@string/nettraffic_settings_title"/>
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="network_traffic_state"
             android:title="@string/network_traffic_state_title"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="network_traffic_hidearrow"
             android:title="@string/network_traffic_hidearrow"
             android:summary="@string/network_traffic_hidearrow_summary"
             android:dependency="network_traffic_state"
             android:defaultValue="false" />
 
-         <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+         <com.bliss.support.preferences.SystemSettingSeekBarPreference
             android:key="network_traffic_autohide_threshold"
             android:title="@string/network_traffic_autohide_threshold_title"
             android:max="10"
@@ -87,19 +87,19 @@
         android:key="statusbar_notifi"
         android:title="@string/statusbar_notifi_cat" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_notif_count"
             android:title="@string/status_bar_notif_count_title"
             android:summary="@string/status_bar_notif_count_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_show_ticker"
             android:title="@string/status_bar_show_ticker_title"
             android:summary="@string/status_bar_show_ticker_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingIntListPreference
+        <com.bliss.support.preferences.SystemSettingIntListPreference
             android:key="status_bar_ticker_animation_mode"
             android:title="@string/ticker_animation_mode_title"
             android:entries="@array/ticker_animation_mode_entries"
@@ -107,7 +107,7 @@
             android:dependency="status_bar_show_ticker"
             android:defaultValue="0" />
 
-        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
             android:key="status_bar_ticker_tick_duration"
             android:title="@string/ticker_tick_duration_title"
             android:dependency="status_bar_show_ticker"
@@ -122,7 +122,7 @@
         android:key="statusbar_weather"
         android:title="@string/statusbar_weather_cat" />
 
-         <com.blissroms.blissify.preference.SystemSettingListPreference
+         <com.bliss.support.preferences.SystemSettingListPreference
             android:key="statusbar_show_weather_temp"
             android:title="@string/statusbar_weather_title"
             android:dialogTitle="@string/statusbar_weather_dialog_title"
