--- a/res/xml/stock_recents_styles.xml
+++ b/res/xml/stock_recents_styles.xml
@@ -30,13 +30,13 @@
             android:entryValues="@array/recents_button_style_values"
             android:defaultValue="0" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="clear_recents_style_enable"
             android:title="@string/clear_recents_style_enable"
             android:summary="@string/clear_recents_style_enable_summary"
             android:defaultValue="false" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="recents_rotate_fab"
             android:title="@string/recents_rotate_fab"
             android:summary="@string/recents_rotate_fab_summary"
@@ -57,38 +57,38 @@
         android:key="recents_style_2"
         android:title="@string/recents_style_2" >
 
-    <com.android.settings.bliss.preference.ColorPickerPreference
+    <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="fab_button_color"
         android:title="@string/fab_button_color"
         android:defaultValue="0xffDC4C3C" 
         android:dependency="clear_recents_style_enable"/>
 
-    <com.android.settings.bliss.preference.ColorPickerPreference
+    <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="clear_button_color"
         android:title="@string/kill_app_button_color"
         android:defaultValue="0xffffffff"
         android:dependency="clear_recents_style_enable" />
         
-    <com.android.settings.bliss.preference.ColorPickerPreference
+    <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="mem_bar_color"
         android:title="@string/mem_bar_color"
         android:defaultValue="0xff009688" 
         android:dependency="clear_recents_style_enable"/>
 
-    <com.android.settings.bliss.preference.ColorPickerPreference
+    <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="mem_text_color"
         android:title="@string/mem_text_color"
         android:defaultValue="0xffffffff" 
         android:dependency="clear_recents_style_enable"/>
 
 
-    <com.android.settings.bliss.preference.ColorPickerPreference
+    <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="recents_date_color"
         android:title="@string/recents_date_color"
         android:defaultValue="0xffffffff" 
         android:dependency="clear_recents_style_enable"/>
 
-    <com.android.settings.bliss.preference.ColorPickerPreference
+    <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="recents_clock_color"
         android:title="@string/recents_clock_color"
         android:defaultValue="0xffffffff"
