--- a/res/xml/buttons_power.xml
+++ b/res/xml/buttons_power.xml
@@ -11,7 +11,7 @@
         android:key="advanced_reboot"
         android:title="@string/global_actions_advanced_reboot_title"
         android:summary="@string/global_actions_advanced_reboot_summary_new"
-        android:defaultValue="false" />
+        android:defaultValue="true" />
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="lockscreen_power_menu_disabled"
