--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -54,6 +54,14 @@
             android:summary="@string/media_art_summary"
             android:defaultValue="true" />
 
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="lockscreen_album_art_filter"
+            android:title="@string/lockscreen_cover_filter_title"
+            android:entries="@array/lockscreen_cover_filter_entries"
+            android:entryValues="@array/lockscreen_cover_filter_values"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="0" />
+
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="force_ambient_for_media"
             android:title="@string/force_ambient_for_media_title"
