--- a/res/xml/interface_batteryled.xml
+++ b/res/xml/interface_batteryled.xml
@@ -75,7 +75,7 @@
             android:summary="@string/fast_charging_led_enabled_summary"
             android:defaultValue="false" />
 
-        <com.bliss.support.preferences.ColorPickerPreference
+        <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="fast_color"
             android:title="@string/fast_charging_light_color_title"
             android:summary="@string/fast_charging_light_color_summary"
