--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -47,6 +47,14 @@
         android:defaultValue="4" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="lockscreen_date_selection"
+        android:title="@string/lockscreen_date_selection_title"
+        android:dialogTitle="@string/lockscreen_date_dialog_title"
+        android:entries="@array/lockscreen_date_selection_entries"
+        android:entryValues="@array/lockscreen_date_selection_values"
+        android:defaultValue="0" />
+
+    <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lock_date_font_style"
         android:icon="@drawable/ic_clock"
         android:title="@string/date_font_style_title"
