Enable edit text on long press for CustomSeekBar items
Change-Id: I6dbb06c9780c74a3da4775306d2af9cb2544fb1e

--- a/res/xml/active_edge.xml
+++ b/res/xml/active_edge.xml
@@ -31,6 +31,7 @@
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="gesture_assist_sensitivity"
         android:title="@string/active_edge_sensitivity_title"
+        allowEditText="true"
         android:max="8"
         settings:min="0"
         settings:units="" />
