--- a/res/xml/buttons_hwkeys.xml
+++ b/res/xml/buttons_hwkeys.xml
@@ -100,6 +100,7 @@
         <com.bliss.support.preferences.CustomSeekBarPreference
             android:key="button_brightness"
             android:title="@string/button_brightness_title"
+            allowEditText="true"
             android:max="255"
             settings:min="0"
             settings:units=""
