--- a/res/xml/gesture_anywhere.xml
+++ b/res/xml/gesture_anywhere.xml
@@ -48,6 +48,7 @@
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="gesture_anywhere_trigger_width"
         android:title="@string/trigger_width_title"
+        allowEditText="true"
         android:defaultValue="40"
         android:max="64"
         settings:min="4"
@@ -57,6 +58,7 @@
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="gesture_anywhere_trigger_top"
         android:title="@string/trigger_top_title"
+        allowEditText="true"
         android:defaultValue="0"
         android:max="99"
         settings:min="0"
@@ -66,6 +68,7 @@
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="gesture_anywhere_trigger_bottom"
         android:title="@string/trigger_bottom_title"
+        allowEditText="true"
         android:defaultValue="100"
         android:max="100"
         settings:min="1"
