Settings: Add toggle to disable charging animation [2/2]
Change-Id: I7d6059082ebb1b48d760da3dae7c95e827870f97

--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -67,6 +67,12 @@
         android:defaultValue="0" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="charging_animation"
+        android:title="@string/charging_animation_title"
+        android:summary="@string/charging_animation_summary"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="notification_guts_kill_app_button"
         android:title="@string/notification_guts_kill_app_button_title"
         android:summary="@string/notification_guts_kill_app_button_summary"
