Port: Wake on plug (2/2)
Change-Id: Ibacaefe296a4c1af4c2db1b6e87652fcd86d20f6

--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -66,6 +66,12 @@
         android:title="@string/screenshot_type_title"
         android:defaultValue="0" />
 
+    <com.bliss.settings.preferences.GlobalSettingSwitchPreference
+        android:key="wake_when_plugged_or_unplugged"
+        android:title="@string/wakeup_when_plugged_unplugged_title"
+        android:summary="@string/wakeup_when_plugged_unplugged_summary"
+        android:defaultValue="true" />
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="charging_animation"
         android:title="@string/charging_animation_title"
