Add more date styles [2/2]
Change-Id: I9348e8bf5466c33270d88336286716ad3112578a

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1161,6 +1161,12 @@
         <item>@string/lockscreen_date_selection_str_gradient</item>
         <item>@string/lockscreen_date_selection_str_border_accent</item>
         <item>@string/lockscreen_date_selection_str_border_gradient</item>
+        <item>@string/lockscreen_date_selection_outline_box</item>
+        <item>@string/lockscreen_date_selection_outline_round</item>
+        <item>@string/lockscreen_date_selection_outline_box_black</item>
+        <item>@string/lockscreen_date_selection_outline_round_black</item>
+        <item>@string/lockscreen_date_selection_outline_box_accent</item>
+        <item>@string/lockscreen_date_selection_outline_round_accent</item>
     </string-array>
 
     <string-array name="lockscreen_date_selection_values" translatable="false">
@@ -1175,6 +1181,12 @@
         <item>8</item>
         <item>9</item>
         <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
     </string-array>
 
 </resources>
