--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1155,9 +1155,7 @@
         <item>@string/lockscreen_date_selection_str_round</item>
         <item>@string/lockscreen_date_selection_qbeta_style</item>
         <item>@string/lockscreen_date_selection_str_accent</item>
-        <item>@string/lockscreen_date_selection_str_accent_day</item>
         <item>@string/lockscreen_date_selection_str_accent_transparent</item>
-        <item>@string/lockscreen_date_selection_str_accent_transparent_day</item>
         <item>@string/lockscreen_date_selection_str_gradient</item>
         <item>@string/lockscreen_date_selection_str_border_accent</item>
         <item>@string/lockscreen_date_selection_str_border_gradient</item>
@@ -1175,9 +1173,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
-        <item>5</item>
         <item>6</item>
-        <item>7</item>
         <item>8</item>
         <item>9</item>
         <item>10</item>
@@ -1187,6 +1183,21 @@
         <item>14</item>
         <item>15</item>
         <item>16</item>
+    </string-array>
+
+    <!-- Lockscreen date styles -->
+    <string-array name="lockscreen_date_format_entries" translatable="false">
+        <item>@string/lockscreen_date_format_default</item>
+        <item>@string/lockscreen_date_format_date_wnumber</item>
+        <item>@string/lockscreen_date_format_date</item>
+        <item>@string/lockscreen_date_format_day_of_month</item>
+    </string-array>
+
+    <string-array name="lockscreen_date_format_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 
 </resources>
